@@ -42,7 +42,7 @@ import org.w3c.dom.Document;
  * @test
  * @bug 6465722
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true transform.Bug6465722
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.Bug6465722
  * @run testng/othervm transform.Bug6465722
  * @summary Test Transformer can transform the node attribute prefixed with a namespace.
  */
